service_ClousterIP.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-web-service
  labels:
    app: nginx-web
    tier: frontend
    environment: production
spec:
  type: ClusterIP
  selector:
    app: nginx-web
    tier: frontend
  ports:
    - protocol: TCP
      port: 80        # Puerto expuesto dentro del cluster
      targetPort: 80  # Puerto del contenedor en el Deployment
